Fix spacing between collections (`section2`)

--- a/src/scenes/section2/Styles.css
+++ b/src/scenes/section2/Styles.css
@@ -92,8 +92,8 @@
 }
 
 .pegboard-container {
-    width: 80%;
-    height: 80%;
+    width: 90%;
+    height: 84%;
     position: relative;
 
     left: 50%;
@@ -119,9 +119,9 @@
     position: absolute;
 }.collection-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(28vmin, 1fr));
-    grid-template-rows: repeat(auto-fit, minmax(min-content, 1fr));
-    gap: 5vmin;
+    grid-template-columns: repeat(auto-fill, minmax(24vmin, 1fr));
+    grid-template-rows: 32vmin;
+    gap: 0vmin;
 
     width: 100%;
     height: 100%;
@@ -130,7 +130,7 @@
 }
 
 .scroller {
-    width: 100%;
+    width: 90%;
     height: calc(100% - 8.5vmin);
 
     overflow-y: scroll;
